// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons test on ios IconDiamond renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconDiamond
  </title>
  <g
    fill="#1D1D1B"
  >
    <path />
  </g>
</svg>
`;

exports[`Icons test on ios IconEmail renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconEmail
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path />
  </g>
</svg>
`;

exports[`Icons test on ios IconFacebook renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconFacebook
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path />
  </g>
</svg>
`;

exports[`Icons test on ios IconStar renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconStar
  </title>
  <polygon
    fill="#1D1D1B"
  />
</svg>
`;

exports[`Icons test on ios IconTwitter renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconTwitter
  </title>
  <path
    fill="#006699"
  />
</svg>
`;

exports[`Icons test on ios IconVideo renders correctly 1`] = `
<svg
  aria-label="[title]"
  height={50}
  role="img"
  width={50}
>
  <title>
    IconVideo
  </title>
  <rect
    fill="#1D1D1B"
    height="13.5721404"
    width="15.4550103"
    x="0.154639175"
    y="0.139754386"
  />
  <polygon
    fill="#1D1D1B"
  />
  <polygon
    fill="#1D1D1B"
  />
</svg>
`;
